# minigames

./: .gitignore  Cargo.toml  README.md  index.html  package.json  setup.sh  vercel.json
admin/: admin.css  admin.js  index.html
api/: index.js
client/: package-lock.json  package.json
client/src/: types.ts
css/: styles.css
db/migrations/: 001_initial_schema.sql  002_subscriptions_billing.sql  003_comments_reviews_moderation.sql  004_multiplayer.sql  005_custom_games.sql  006_multiplayer_tech_stack.sql  007_game_categories.sql  run.js
db/seeds/: run.js
docs/: API.md  ARCHITECTURE.md  GAME_DEVELOPMENT.md  PERFORMANCE.md
game-engine/: Cargo.toml  build.sh
game-engine/src/: asset_loader.rs  lib.rs  pixar.rs
game-engine/src/games/: aero_engineering.rs  cable_car_conundrum.rs  campus_dash.rs  campus_guard.rs  chemistry_escape.rs  color_lab_quest.rs  demo_day.rs  drone_defense.rs  find_the_principal.rs  formula_stem.rs  geology_deep_dive.rs  gravity_shift_run.rs  heavy_gear_delivery.rs  history_vault_escape.rs  hydro_logic_puzzles.rs  lab_breach.rs  logicrons_grid_shift.rs  mod.rs  molecular_split.rs  parkour_lab.rs  physics_master_billiards.rs  robot_repair_bay.rs  rover_field_test.rs  safety_first_defense.rs  stem_celebration.rs  stem_project_volley.rs
js/: admin-games.js  lobby-ui.js  site-ui.js
js/engine/: BootScene.js  CharacterFactory.js  CloudSyncAPI.js  GameRegistry.js  Launcher.js  MultiplayerClient.js  SaveManager.js
js/games/: AeroEngineering.js  CableCarConundrum.js  CampusDash.js  CampusGuard.js  (+21 more)
server/: .env.example  index.js  package-lock.json  package.json
server-rs/: Cargo.toml  Shuttle.toml
server-rs/src/: cache.rs  config.rs  db.rs  error.rs  main.rs
server-rs/src/middleware/: admin.rs  auth.rs  entitlements.rs  localization.rs  mod.rs  rate_limit.rs  tenant.rs
server-rs/src/models/: comment.rs  compliance.rs  economy.rs  game_progress.rs  mod.rs  multiplayer.rs  organisation.rs  player.rs  subscription.rs
server-rs/src/routes/: admin.rs  auth.rs  billing.rs  comments.rs  compliance.rs  economy.rs  friends.rs  games.rs  health.rs  leaderboards.rs  mod.rs  multiplayer.rs  organisations.rs  player.rs  presence.rs  scores.rs  sync.rs  webhooks.rs
server-rs/src/services/: achievements.rs  leaderboard.rs  mod.rs  room_manager.rs  storage_quotas.rs  stripe_service.rs  subscription_sync.rs  usage_meters.rs
(+76 files in other folders)
