[package]
name = "stem-adventures-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Shuttle runtime
shuttle-runtime = "0.51"
shuttle-axum = "0.51"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "set-header", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"

# Crypto (for Stripe webhook HMAC verification)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# HTTP client (for Stripe API calls)
reqwest = { version = "0.12", features = ["json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
rand = "0.8"
bytes = "1"
http = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
